add some print screens